--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-react": "^2.0.0",
     "@monaco-editor/react": "^2.5.0",
+    "@uiw/react-markdown-editor": "^2.0.3",
     "axios": "^0.19.0",
     "browserfs": "^1.4.3",
-    "ckeditor4-react": "^1.0.0",
-    "codemirror": "^5.49.2",
     "electron": "^4.1.0",
     "hotkeys-js": "^3.7.3",
-    "iframe-resizer-react": "^1.1.0",
     "is-buffer": "^2.0.4",
     "js-file-download": "^0.4.8",
     "lodash": "^4.17.15",
@@ -23,16 +21,15 @@
     "randomstring": "^1.1.5",
     "react": "^16.11.0",
     "react-blockly-updated": "^0.3.19",
-    "react-codemirror2": "^6.0.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.2.0",
     "react-hackterm": "^1.2.5",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.2.2",
-    "react-mde": "^7.6.2",
     "react-monaco-editor": "^0.47.0",
     "react-mosaic-component": "^3.2.0",
+    "react-new-window": "^0.2.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -67,7 +64,6 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/codemirror": "^0.0.81",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.17",
     "@types/randomstring": "^1.1.6",
