--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.11.0",
     "react-draggable": "^4.2.0",
     "react-hackterm": "^1.2.5",
+    "react-json-editor-ajrm": "^2.5.13",
     "react-json-view": "^1.19.1",
     "react-markdown": "^4.2.2",
     "react-monaco-editor": "^0.47.0",
