--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vss-react",
-  "version": "0.1.0",
+  "name": "wink-front",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^3.21.0",
@@ -11,7 +11,7 @@
     "@uiw/react-markdown-editor": "^2.0.3",
     "axios": "^0.19.0",
     "browserfs": "^1.4.3",
-    "electron": "^4.1.0",
+    "electron": "^11.4.12",
     "hotkeys-js": "^3.7.3",
     "is-buffer": "^2.0.4",
     "lodash": "^4.17.15",
@@ -23,7 +23,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.2.0",
-    "react-hackterm": "^1.2.5",
     "react-json-editor-ajrm": "^2.5.13",
     "react-json-view": "^1.19.1",
     "react-monaco-editor": "^0.47.0",
@@ -66,6 +65,6 @@
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
-    "typescript": "3.6.3"
+    "typescript": "3.9.10"
   }
 }
