fix: fix broken lock-file

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-react": "^2.0.0",
     "@monaco-editor/react": "^2.5.0",
-    "@uiw/react-markdown-editor": "^2.0.3",
-    "axios": "^0.19.0",
+    "@uiw/react-markdown-editor": "^4.0.2",
+    "axios": "^0.26.1",
     "browserfs": "^1.4.3",
     "electron": "^11.4.12",
     "hotkeys-js": "^3.7.3",
@@ -19,17 +19,16 @@
     "prism-react-renderer": "^1.0.2",
     "randomstring": "^1.1.5",
     "react": "^16.11.0",
-    "react-blockly-updated": "^0.3.19",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.2.0",
     "react-json-editor-ajrm": "^2.5.13",
     "react-json-view": "^1.19.1",
-    "react-monaco-editor": "^0.47.0",
+    "react-monaco-editor": "^0.39.1",
     "react-mosaic-component": "^3.2.0",
     "react-new-window": "^0.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "react-scrollbar": "^0.5.6",
     "require-from-string": "^2.0.2",
     "styled-components": "^4.4.1"
@@ -61,7 +60,7 @@
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.17",
     "@types/randomstring": "^1.1.6",
-    "@types/react": "^16.9.16",
+    "@types/react": "^16.14.25",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.4",
     "@types/react-router-dom": "^5.1.3",
