--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-scripts": "^5.0.1",
     "react-scrollbar": "^0.5.6",
     "require-from-string": "^2.0.2",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "typescript": "^3.9.10"
   },
   "main": "src/electron.js",
   "scripts": {
@@ -63,7 +64,6 @@
     "@types/react": "^16.14.25",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "typescript": "3.9.10"
+    "@types/react-router-dom": "^5.1.3"
   }
 }
