--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@ckeditor/ckeditor5-react": "^2.0.0",
     "@monaco-editor/react": "^3.8.3",
     "@uiw/react-markdown-editor": "^4.0.2",
+    "antlr4ts": "^0.5.0-alpha.4",
     "axios": "^0.26.1",
     "browserfs": "^1.4.3",
     "electron": "^11.4.12",
@@ -27,8 +28,7 @@
     "react-scrollbar": "^0.5.6",
     "require-from-string": "^2.0.2",
     "styled-components": "^4.4.1",
-    "typescript": "^3.9.10",
-    "antlr4ts": "^0.5.0-alpha.4"
+    "typescript": "^3.9.10"
   },
   "main": "src/electron.js",
   "scripts": {
