feat(rdf-editor): implement editor for rdf/xml

--- a/src/config/EditorsConfig.json
+++ b/src/config/EditorsConfig.json
@@ -220,6 +220,15 @@
       }
     },
     {
+      "name": "RdfEditor",
+      "logo": "scs.svg",
+      "Languages": {
+        "rdf": [
+          "rdf"
+        ]
+      }
+    },
+    {
       "name": "MDEditor",
       "logo": "md.png",
       "Languages": {
