refactor(rdf-editor): add owl file format support

--- a/src/config/EditorsConfig.json
+++ b/src/config/EditorsConfig.json
@@ -225,6 +225,9 @@
       "Languages": {
         "rdf": [
           "rdf"
+        ],
+        "owl": [
+          "owl"
         ]
       }
     },
