--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-scrollbar": "^0.5.6",
     "require-from-string": "^2.0.2",
     "styled-components": "^4.4.1",
-    "typescript": "^3.9.10"
+    "typescript": "^3.9.10",
+    "monaco-editor-webpack-plugin": "^2.1.0"
   },
   "main": "src/electron.js",
   "scripts": {
