--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hotkeys-js": "^3.7.3",
     "lodash": "^4.17.15",
     "monaco-editor": "^0.21.2",
+    "monaco-editor-webpack-plugin": "^2.1.0",
     "react": "^16.11.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.11.0",
@@ -28,15 +29,15 @@
     "react-scrollbar": "^0.5.6",
     "require-from-string": "^2.0.2",
     "styled-components": "^4.4.1",
-    "typescript": "^3.9.10",
-    "monaco-editor-webpack-plugin": "^2.1.0"
+    "typescript": "^3.9.10"
   },
   "main": "src/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "electron": "electron ."
+    "electron": "electron .",
+    "antlr4ts": "antlr4ts -visitor src/Utilities/antlr/scs.g4"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -61,6 +62,7 @@
     "@types/react": "^16.14.25",
     "@types/react-custom-scrollbars": "^4.0.6",
     "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3"
+    "@types/react-router-dom": "^5.1.3",
+    "antlr4ts-cli": "^0.5.0-alpha.4"
   }
 }
